# VehicleDC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/vehicle_dc/: vehicle_dc.h
share/py_module/: bbox.py  darknet.py  darknet_util.py  dataset.py  inference.py  preprocess.py
src/: config.h.in  vehicle_dc.cpp  vehicle_dc_impl.cpp  vehicle_dc_impl.h
test/: CMakeLists.txt  jpeg_decoder.cpp  jpeg_decoder.h  test.cpp  test.h.in
test/cmake/: FindTurboJPEG.cmake
